feat: add one-shot mode and github actions schedule

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 # Binaries
-applereleases
-applereleasesbot
+/applereleases
+/applereleasesbot
 
 # State
-newscache
+# newscache (tracked for git persistence)
 
 # OS specific
 .DS_Store
