--- a/.github/workflows/scheduled-run.yml
+++ b/.github/workflows/scheduled-run.yml
@@ -2,7 +2,7 @@ name: Scheduled Check
 
 on:
   schedule:
-    - cron: '0 * * * *' # Run every hour
+    - cron: '15 18 * * *'
   workflow_dispatch:
 
 jobs:
